update to social links

--- a/css/style.css
+++ b/css/style.css
@@ -493,7 +493,7 @@ section.hero-text h1 {
             transform: rotate(360deg);
   }
   
-  .rounded-social-buttons .fa-tiktok, .fa-facebook-f, .fa-linkedin, .fa-youtube, .fa-instagram {
+  .rounded-social-buttons .fa-tiktok, .fa-facebook-f, .fa-linkedin, .fa-yelp, .fa-instagram {
     font-size: 25px;
    margin-top: 7px;
    
@@ -530,11 +530,11 @@ section.hero-text h1 {
     border-color: #007bb5;
   }
   
-  .rounded-social-buttons .social-button.youtube {
+  .rounded-social-buttons .social-button.yelp {
     background: #bb0000;
   }
   
-  .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.youtube:focus {
+  .rounded-social-buttons .social-button.youtube:hover, .rounded-social-buttons .social-button.yelp:focus {
     color: #bb0000;
     background: #fefefe;
     border-color: #bb0000;
