--- a/css/style.css
+++ b/css/style.css
@@ -1681,6 +1681,32 @@ article .align-right {
         margin-bottom: 20px;
     }
 }
+
+
+
+/* scroll top starts */
+#scroll-top {
+    position: fixed;
+    top: -140%;
+    right: 2rem;
+    padding: 1rem 1.5rem;
+    font-size: 2rem;
+    background: #ffae00;
+    color: rgb(13, 0, 44);
+    border-radius: 50%;
+    transition: 1s linear;
+    z-index: 1000;
+  }
+  #scroll-top.active {
+    top: calc(100% - 12rem);
+  }
+  /* scroll top ends */
+
+
+
+
+
+
 @media (max-width: 480px) {
     .bottom-article a.pull-right {
         float: left;
