--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,6 @@ img.img-polaroid {
     margin: 0 0 20px 0;
 }
 
-.img-box {
-    max-width: 100%;
-}
 
 
 
@@ -194,6 +191,13 @@ header .nav li .dropdown-menu li a {
     line-height: 28px;
     padding: 3px 12px;
 }
+
+
+
+
+
+
+
 /* --- menu --- */
 
 header .navigation {
@@ -344,9 +348,9 @@ select.selectmenu {
     margin: 12px 0 18px;
     font-size: 22px;
 }
-.skill-home {
-    margin-bottom: 50px;
-}
+
+
+
 .c1 {
     border: #ed5441 1px solid;
     background: #ed5441;
@@ -363,35 +367,18 @@ select.selectmenu {
     border: #609cec 1px solid;
     background: #609cec;
 }
-.skill-home .icons {
-    padding: 30px 0 0 0;
-    width: 94px;
-    height: 94px;
-    color: #fff;
-    font-size: 42px;
-    font-size: 38px;
-    text-align: center;
-    -ms-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 0;
-    display: inline-table;
-    border: 1px solid #E5E5E5;
-    background: transparent;
-    color: #3BA0F4;
-    border-bottom: 4px solid #3BA0F4;
-    font-style: normal !important;
-}
-.skill-home h2 {
-    padding-top: 20px;
-    font-size: 36px;
-    font-weight: 700;
-}
+
+
+
+
+
+
 .testimonial-solid {
     padding: 50px 0 60px 0;
     margin: 0 0 0 0;
     background: #F0F0F0;
     text-align: center;
+
 }
 .testi-icon-area {
     text-align: center;
@@ -432,12 +419,8 @@ select.selectmenu {
     padding: 40px 0;
     background: #F2F2F2;
 }
-img.img-center {
-    margin: 0 auto;
-    display: block;
-    max-width: 100%;
-}
-/* Testimonial
+
+/* Review Section Begins
 ----------------------------------*/
 
 .testimonial-area {
@@ -448,6 +431,7 @@ img.img-center {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -ms-background-size: cover;
+    margin-bottom: -2rem;
 }
 .testimonial-solid p {
     color: #000000;
@@ -456,14 +440,31 @@ img.img-center {
     font-style: italic;
     font-weight: 300;
 }
+
+
+
+
+
+/*About Us Section begins */
+
 section.hero-text {
     background: #3BA0F4;
     padding: 50px 0 50px 0;
     color: #fff;
 }
+
+/* Logo Image resizing Done Here */ 
+section.hero-text img{
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    float: left;
+    border-radius: 2rem;
+}
+
 section.hero-text h1 {
     color: #fff;
 }
+
 
 
 /*Start of the social icons */
@@ -571,7 +572,7 @@ section.hero-text h1 {
   .btn-3 {
     flex: auto;
     margin-top: 50px;
-    margin-right: 20px;
+    margin-right: 10px;
     padding: 10px;
     text-align: center;
     text-transform: uppercase;
@@ -580,9 +581,8 @@ section.hero-text h1 {
     color: black;
     font-weight: 200;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-    box-shadow: 0 0 20px #eee;
     border-radius: 10px;
-    background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #84fab0 100%);
+    background-image: linear-gradient(to right, #84fab0 0%, #8fd3f4 51%, #007bb5 100%);
    }
 
    .btn-3:hover {
@@ -676,11 +676,12 @@ section.hero-text h1 {
 ==================================== */
 
 #inner-headline {
-    background: #5DA5E4;
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5DA5E4, #74ebd5);
     position: relative;
     margin: 0;
     padding: 0;
-    color: #1891EC;
+  
 }
 #inner-headline h2.pageTitle {
     color: #FFFFFF;
@@ -711,6 +712,83 @@ ul.breadcrumb li a:hover {
     text-decoration: none;
 }
  
+
+
+
+/*Start of Services section */
+
+.content{
+    height: fit-content;
+    margin: 2em;
+}
+
+button {
+    font-size: 1em;
+    margin: 2em;
+    padding: .5em 1em .5em 1em;
+    background: #5DA5E4;
+    border: none;
+    color: #fff;
+    font-family: 'Oxygen';
+    border-radius: 2rem;
+  }
+  
+  .wrapper {
+    max-width: 960px;
+    margin: 0 auto;
+    min-height: 100vh;
+    border-radius: 3rem;
+  }
+  
+
+  
+  #landing {
+    height: 50vh;
+    background: #74ebd5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5DA5E4, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color:white;
+  }
+  
+  .services {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-top: -12em;
+  }
+  
+  .service-item {
+    padding-top: 2em;
+    background: lightgrey;
+    width: 30%;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 1rem;
+  }
+  
+  @media (max-width: 700px) {
+    .services {
+  
+      margin: 0;
+    }
+    
+    .service-item {
+      width: 80%;
+      align-self: center;
+    }
+  }
+
+
+
+
+
+
+
+
+
 
 /*-------Contact---------*/
 .contact input{
@@ -1118,6 +1196,14 @@ article .align-right {
     color: #FFF;
     text-decoration: none;
 }
+
+
+
+
+
+
+
+
 /*  Media queries 
 ============================= */
 
