--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,7 @@ header ul.nav li ul li ul {
     right: 0;
     margin-top: 3px;
     padding-left: 20px;
+    border-radius: 2rem;
 }
 .navbar .nav > li > .dropdown-menu:before {
     display: inline-block;
@@ -351,95 +352,8 @@ select.selectmenu {
 
 
 
-.c1 {
-    border: #ed5441 1px solid;
-    background: #ed5441;
-}
-.c2 {
-    border: #24c4db 1px solid;
-    background: #24c4db;
-}
-.c3 {
-    border: #1891EC 1px solid;
-    background: #1891EC;
-}
-.c4 {
-    border: #609cec 1px solid;
-    background: #609cec;
-}
 
 
-
-
-
-
-.testimonial-solid {
-    padding: 50px 0 60px 0;
-    margin: 0 0 0 0;
-    background: #F0F0F0;
-    text-align: center;
-
-}
-.testi-icon-area {
-    text-align: center;
-    position: absolute;
-    top: -84px;
-    margin: 0 auto;
-    width: 100%;
-}
-.testi-icon-area .quote {
-    padding: 15px 0 0 0;
-    margin: 0 0 0 0;
-    background: #ffffff;
-    text-align: center;
-    color: #1891EC;
-    display: inline-table;
-    width: 70px;
-    height: 70px;
-    -ms-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
-    font-size: 42px;
-    font-weight: 300;
-    border: 1px solid #1891EC;
-    display: none;
-}
-.testi-icon-area .carousel-inner {
-    margin: 20px 0;
-}
-.carousel-indicators {
-    bottom: -30px;
-}
-.text-center img {
-    margin: auto;
-    width: 100%;
-}
-.aboutUs {
-    padding: 40px 0;
-    background: #F2F2F2;
-}
-
-/* Review Section Begins
-----------------------------------*/
-
-.testimonial-area {
-    padding: 0 0 0 0;
-    margin: 5;
-    background: url(../img/low-poly01.jpg) fixed center center;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -ms-background-size: cover;
-    margin-bottom: -2rem;
-}
-.testimonial-solid p {
-    color: #000000;
-    font-size: 16px;
-    line-height: 30px;
-    font-style: italic;
-    font-weight: 300;
-}
 
 
 
@@ -448,7 +362,8 @@ select.selectmenu {
 /*About Us Section begins */
 
 section.hero-text {
-    background: #3BA0F4;
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5DA5E4, #74ebd5);
     padding: 50px 0 50px 0;
     color: #fff;
 }
@@ -592,13 +507,60 @@ section.hero-text h1 {
   /*End of call me and email */
 
 
+
+
+
+/* Review Section Begins
+----------------------------------*/
+
+.testimonial-area{
+    margin-bottom: 10px;
+}
+
+.testimonial-solid {
+    padding: 50px 0 4px 0;
+    background: whitesmoke;
+    text-align: center;
+    margin-bottom: -10px;
+}
+
+ .carousel-inner {
+    margin: 20px 0;
+}
+.carousel-indicators {
+    bottom: -30px;
+}
+.text-center img {
+    margin: auto;
+    width: 100%;
+}
+
+.testimonial-solid p {
+    color: #000000;
+    font-size: 16px;
+    line-height: 30px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* Content
 ==================================== */
 
 #content {
     position: relative;
-    background: #fff;
-    padding: 50px 0 0px 0;
+    background: whitesmoke;
+    padding: 30px 0 0px 0;
 }
 #content img {
     max-width: 100%;
@@ -609,36 +571,7 @@ section.hero-text h1 {
     color: #5DA5E4;
     border-bottom: 3px solid #5DA5E4;
 }
-.cta-text {
-    text-align: center;
-    margin-top: 10px;
-}
-.big-cta .cta {
-    margin-top: 10px;
-}
-.box {
-    width: 100%;
-}
-.box-gray {
-    background: #f8f8f8;
-    padding: 20px 20px 30px;
-}
-.box-gray h4,
-.box-gray i {
-    margin-bottom: 20px;
-}
-.box-bottom {
-    padding: 20px 0;
-    text-align: center;
-}
-.box-bottom a {
-    color: #fff;
-    font-weight: 700;
-}
-.box-bottom a:hover {
-    color: #eee;
-    text-decoration: none;
-}
+
 /* Bottom
 ==================================== */
 
@@ -660,7 +593,7 @@ section.hero-text h1 {
 }
 #inner-headline h2.pageTitle {
     color: #FFFFFF;
-    padding: 5px 0;
+ 
     display: block;
 }
 
@@ -674,32 +607,22 @@ section.hero-text h1 {
     margin: 2em;
 }
 
-button {
-    font-size: 1em;
-    margin: 2em;
-    padding: .5em 1em .5em 1em;
-    background: #5DA5E4;
-    border: none;
-    color: #fff;
-    font-family: 'Oxygen';
-    border-radius: 2rem;
-  }
-  
+
   .wrapper {
     max-width: 960px;
     margin: 0 auto;
-    min-height: 100vh;
+    min-height: 25vh;
     border-radius: 3rem;
   }
   
 
   
   #landing {
-    height: 50vh;
+    height: 25vh;
     background: #74ebd5;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #3BA0F4);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5DA5E4, #74ebd5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color:white;
+    
   }
   
   .services {
@@ -708,6 +631,8 @@ button {
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: -12em;
+    height: auto;
+    
   }
   
   .service-item {
@@ -719,6 +644,7 @@ button {
     margin-bottom: 1em;
     box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 1rem;
+    position: relative;
   }
 
   .service-item img{
@@ -730,7 +656,7 @@ button {
   
   @media (max-width: 700px) {
     .services {
-  
+        
       margin: 0;
     }
     
@@ -851,7 +777,9 @@ ul.link-list li {
     list-style: none;
 }
 footer {
-    background: #06091D;
+    background: #74ebd5;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5DA5E4, #74ebd5);
 }
 footer ul.link-list li a {
     color: #fff;
@@ -893,17 +821,10 @@ aside .widgetheading {
 footer .widgetheading {
     position: relative;
 }
-footer .widget .social-network {
-    position: relative;
-}
-.team-member h4 {
-    text-align: center;
-    margin-bottom: 5px;
-}
-.team-member .deg {
-    text-align: center;
-    display: block;
-}
+
+
+
+
 #bottom .widget .widgetheading span,
 aside .widget .widgetheading span,
 footer .widget .widgetheading span {
@@ -946,27 +867,6 @@ footer .widget .widgetheading span {
 
 
 
-/* ===== Widgets ===== */
-/* --- flickr --- */
-
-.widget .flickr_badge {
-    width: 100%;
-}
-.widget .flickr_badge img {
-    margin: 0 9px 20px 0;
-}
-footer .widget .flickr_badge {
-    width: 100%;
-}
-footer .widget .flickr_badge img {
-    margin: 0 9px 20px 0;
-}
-.flickr_badge img {
-    width: 50px;
-    height: 50px;
-    float: left;
-    margin: 0 9px 20px 0;
-}
 
 
 
@@ -974,6 +874,7 @@ footer .widget .flickr_badge img {
 footer {
     padding: 50px 0 0 0;
     color: #f8f8f8;
+    column-span: all;
 }
 footer a {
     color: #fff;
@@ -982,91 +883,13 @@ footer a:hover {
     color: #eee;
 }
 
-
-
-footer h1,
-footer h2,
-footer h3,
-footer h4,
-footer h5,
-footer h6 {
-    color: #fff;
-}
-footer address {
-    line-height: 1.6em;
-}
-footer h5 a:hover,
-footer a:hover {
-    text-decoration: none;
-}
-ul.social-network {
-    list-style: none;
-    margin: 0;
-}
-ul.social-network li {
-    display: inline;
-    margin: 0 5px;
-    border: 1px solid #262A45;
-    padding: 5px 0 0;
-    width: 32px;
-    display: inline-block;
-    text-align: center;
-    height: 32px;
-    vertical-align: baseline;
-    border-bottom: 2px solid #3BA0F4;
-}
-#sub-footer {
-    text-shadow: none;
-    color: #f5f5f5;
-    padding: 0;
-    padding-top: 30px;
-    margin: 20px 0 0 0;
-    background: #06091D;
-}
-#sub-footer p {
-    margin: 0;
-    padding: 0;
-}
-#sub-footer span {
-    color: #f5f5f5;
-}
-.copyright {
-    text-align: left;
-    font-size: 12px;
-}
-#sub-footer ul.social-network {
-    float: right;
+/*Below is the text at top of footer */
+h5{
+color: white;
 }
 
 
 
-/* scroll to top */
-
-.scrollup {
-    position: fixed;
-    width: 32px;
-    height: 32px;
-    bottom: 0px;
-    right: 20px;
-    background: #000000;
-}
-a.scrollup {
-    outline: 0;
-    text-align: center;
-}
-a.scrollup:hover,
-a.scrollup:active,
-a.scrollup:focus {
-    opacity: 1;
-    text-decoration: none;
-}
-a.scrollup i {
-    margin-top: 10px;
-    color: #fff;
-}
-a.scrollup i:hover {
-    text-decoration: none;
-}
 .absolute {
     position: absolute;
 }
@@ -1115,46 +938,7 @@ article .align-right {
     float: right;
     margin: 5px 0 15px 15px;
 }
-============================ */ .clear-marginbot {
-    margin-bottom: 0;
-}
-.marginbot10 {
-    margin-bottom: 10px;
-}
-.marginbot20 {
-    margin-bottom: 20px;
-}
-.marginbot30 {
-    margin-bottom: 30px;
-}
-.marginbot40 {
-    margin-bottom: 40px;
-}
-.clear-margintop {
-    margin-top: 0;
-}
-.margintop10 {
-    margin-top: 10px;
-}
-.margintop20 {
-    margin-top: 20px;
-}
-.margintop30 {
-    margin-top: 30px;
-}
-.margintop40 {
-    margin-top: 40px;
-}
-.flex-control-paging li a {
-    width: 30px;
-    height: 10px;
-    border-radius: 0;
-}
-.btn:hover,
-.btn:focus {
-    color: #FFF;
-    text-decoration: none;
-}
+
 
 
 
