--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -23,7 +23,7 @@
 *********************************/ 
 .flexslider { margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img { width: 100%; height:20%; display: flex;}
+.flexslider .slides img { width: 100%; height:100%; display: inline-flex;}
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
@@ -39,10 +39,9 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider {background:none; position: relative; 
-zoom: 1;}
+.flexslider {background:none; position: relative; }
 .flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; transition: all 1s ease;}
-.loading .flex-viewport {max-height: 300px;}
+.loading .flex-viewport {max-height: 50px;}
 .flexslider .slides {zoom: 1;}
 
 .carousel li {margin-right: 5px}
