--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,11 @@ select.selectmenu {
 
 
 
+.banner-image img{
+ width: 100%;
+ height: auto;
+ position: relative;
+}
 
 
 
@@ -361,11 +366,17 @@ select.selectmenu {
 
 /*About Us Section begins */
 
+
+.hero-text{
+    margin: 0 auto;
+}
+
 section.hero-text {
     background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5DA5E4, #74ebd5);
     padding: 50px 0 50px 0;
     color: #fff;
+    vertical-align: center;
 }
 
 /* Logo Image resizing Done Here */ 
@@ -846,22 +857,11 @@ footer .widget .widgetheading span {
 /* --- Map --- */
 
 .map {
-    position: relative;
-    margin-top: -50px;
+    position: flex;
+    margin-top:  2px;
     margin-bottom: 40px;
 }
-.map iframe {
-    width: 100%;
-    height: 450px;
-    border: none;
-}
-.map-grid iframe {
-    width: 100%;
-    height: 350px;
-    border: none;
-    margin: 0 0 -5px 0;
-    padding: 0;
-}
+
 
 
 
