--- a/css/style.css
+++ b/css/style.css
@@ -292,57 +292,6 @@ select.selectmenu {
 
 
 
-/* --- flexslider --- */
-
-#main-slider:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.48);
-    z-index: 1;
-    position: absolute;
-}
-.flex-direction-nav a {
-    display: none;
-}
-.flexslider {
-    padding: 0;
-    background: #fff;
-    position: relative;
-    zoom: 1;
-}
-.flex-direction-nav .flex-prev {
-    left: 0px;
-}
-.flex-direction-nav .flex-next {
-    right: 0px;
-}
-.flex-caption {
-    zoom: 1;
-    bottom: 198px;
-    background-color: transparent;
-    color: #fff;
-    margin: 0;
-    padding: 25px 25px 25px 30px;
-    position: absolute;
-    left: 0;
-    text-align: center;
-    margin: 0 auto;
-    right: 0px;
-    display: inline-block;
-    bottom: 21%;
-}
-.flex-caption h3 {
-    color: #3BA0F4;
-    letter-spacing: 1px;
-    margin-bottom: 8px;
-    text-transform: uppercase;
-    font-size: 45px;
-}
-.flex-caption p {
-    margin: 12px 0 18px;
-    font-size: 22px;
-}
 
 
 
@@ -362,21 +311,19 @@ select.selectmenu {
 
 
 .hero-text{
-    margin-left: auto;
-    margin-right: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto ;
     text-align: center;
 }
-.hero-text .container{
-    vertical-align: center;
-    
-}
+
 
 section.hero-text {
     background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5DA5E4, #74ebd5);
     padding: 50px 0 50px 0;
     color: #fff;
-    vertical-align: center;
+    display: block;
     
 
 }
@@ -391,6 +338,13 @@ section.hero-text img{
 
 section.hero-text h1 {
     color: #fff;
+}
+
+
+.hero-text .container .map{
+    right: 0;
+    margin-top: 3rem;
+    vertical-align: right;
 }
 
 
@@ -847,13 +801,6 @@ footer .widget .widgetheading span {
 
 
 
-/* --- Map --- */
-
-.map {
-    position: flex;
-    margin-top:  2px;
-    margin-bottom: 40px;
-}
 
 
 
