--- a/css/style.css
+++ b/css/style.css
@@ -589,7 +589,7 @@ h2{
     text-align: center;
     color: black;
     font-weight: 700;
-    line-height: 3;
+    line-height: 1;
 }
 
 
@@ -621,10 +621,12 @@ h2{
   }
   
   .service-item {
-    padding-top: 2em;
+    padding-top: 1em;
     background: lightgrey;
-    width: 30%;
+    width: 20%;
+    height: 400;
     text-align: center;
+    flex-direction: column;
     margin-top: 1em;
     margin-bottom: 1em;
     box-shadow:0 0 10px rgba(0, 0, 0, 0.5);
@@ -632,10 +634,14 @@ h2{
     position: relative;
   }
 
+  .service-item h2{
+    text-align: center;
+  }
+
   .service-item img{
     border-radius: 2rem;
-    width:  300px;
-    height: auto;
+    width:  60%;
+    height: 200;
     background-size: cover;
   }
   
@@ -649,8 +655,10 @@ h2{
     }
     
     .service-item {
-      width: 80%;
+      width: 40%;
+
       align-self: center;
+
     
     }
   }
@@ -664,57 +672,6 @@ h2{
 
 
 
-/*-------Contact---------*/
-.contact input{
-  background: #fff;
-  border: solid 1px #ddd;
-  color: #000;
-  padding: 15px 30px;
-  margin-right: 3%;
-  margin-bottom: 30px;
-  outline: none;
-}
-
-.contact.noMarr input{
-  margin-right: 0px;
-}
-
-.contact textarea{
-  background: #fff;
-  color: #000;
-  border: solid 1px #ddd;
-  padding: 15px 30px;
-  margin-bottom: 40px;
-  outline: none;
-  height: 150px;
-} 
-.contact .submit {
-  background: #5DA5E4; 
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-  text-align: center;
-  margin: 0px;
-  border: none !important;
-  border-radius: 0;
-  float: left; 
-}
-.contact .submit:hover {
-  background: #6FB4F0;
-}
-
-.done {
-  display: none;
-}
-
-.error input,input.error,.error textarea,textarea.error {
-  background-color: #ffffff;
-  border: 1px solid red !Important;
-  -webkit-transition: border linear 0.2s,box-shadow linear 0.2s;
-  -moz-transition: border linear 0.2s,box-shadow linear 0.2s;
-  -o-transition: border linear 0.2s,box-shadow linear 0.2s;
-  transition: border linear 0.2s,box-shadow linear 0.2s;
-}
 
 
 
@@ -722,7 +679,7 @@ h2{
 
 
 
-/* --- button on index.html and contact.html --- */
+/* --- button on index.html --- */
 
 .btn {
     text-align: center;
@@ -861,54 +818,67 @@ color: white;
 
 
 
-.absolute {
-    position: absolute;
+.gallery {
+	display: flex;
+	flex-wrap: wrap;
+	/* Compensate for excess margin on outer gallery flex items */
+	margin: -1rem -1rem;
 }
-.relative {
-    position: relative;
+
+.gallery-item {
+	/* Minimum width of 24rem and grow to fit available space */
+	flex: 1 0 24rem;
+	/* Margin value should be half of grid-gap value as margins on flex items don't collapse */
+	margin: 1rem;
+	box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+	overflow: hidden;
 }
-.aligncenter {
-    text-align: center;
+
+.gallery-image {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	transition: transform 400ms ease-out;
 }
-.aligncenter span {
-    margin-left: 0;
+
+.gallery-image:hover {
+	transform: scale(1.15);
 }
-.floatright {
-    float: right;
+
+/*
+
+The following rule will only run if your browser supports CSS grid.
+
+Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling. 
+
+*/
+
+@supports (display: grid) {
+	.gallery {
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+		grid-gap: 2rem;
+	}
+
+	.gallery,
+	.gallery-item {
+		margin: 0;
+	}
 }
-.floatleft {
-    float: left;
-}
-.floatnone {
-    float: none;
-}
-.aligncenter {
-    text-align: center;
-}
-img.pull-left,
-.align-left {
-    float: left;
-    margin: 0 15px 15px 0;
-}
-.widget img.pull-left {
-    float: left;
-    margin: 0 15px 15px 0;
-}
-img.pull-right,
-.align-right {
-    float: right;
-    margin: 0 0 15px 15px;
-}
-article img.pull-left,
-article .align-left {
-    float: left;
-    margin: 5px 15px 15px 0;
-}
-article img.pull-right,
-article .align-right {
-    float: right;
-    margin: 5px 0 15px 15px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
