--- a/css/style.css
+++ b/css/style.css
@@ -831,10 +831,11 @@ color: white;
 	/* Margin value should be half of grid-gap value as margins on flex items don't collapse */
 	margin: 1rem;
 	box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
-	overflow: hidden;
+
 }
 
 .gallery-image {
+    border-radius: 1rem;
 	display: block;
 	width: 100%;
 	height: 100%;
@@ -844,6 +845,7 @@ color: white;
 
 .gallery-image:hover {
 	transform: scale(1.15);
+    
 }
 
 /*
