--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,11 @@ color: white;
 
 
 
+
+/* Start of the image gallery */
+
+
+
 .gallery {
 	display: flex;
 	flex-wrap: wrap;
@@ -856,13 +861,8 @@ color: white;
     
 }
 
-/*
 
-The following rule will only run if your browser supports CSS grid.
 
-Remove or comment-out the code block below to see how the browser will fall-back to flexbox styling. 
-
-*/
 
 @supports (display: grid) {
 	.gallery {
@@ -880,7 +880,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
 
 
-
+/* End of Image Gallery */
 
 
 
@@ -901,7 +901,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
 /*  Media queries 
 ============================= */
 
-@media (min-width: 768px) and (max-width: 979px) {
+@media only screen and (max-width: 768px) {
     a.detail {
         background: none;
         width: 100%;
@@ -925,7 +925,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
     }
     
 }
-@media (max-width: 767px) {
+@media only screen and (max-width: 768px) {
     .navbar-default .navbar-collapse {
         border-color: none;
         background: #000000;
@@ -1073,7 +1073,7 @@ Remove or comment-out the code block below to see how the browser will fall-back
 
 
 
-@media (max-width: 480px) {
+@media only screen and (max-width: 768px) {
     .bottom-article a.pull-right {
         float: left;
         margin-top: 20px;
