--- a/css/style.css
+++ b/css/style.css
@@ -651,12 +651,13 @@ section.hero-text h1 {
       margin: 0;
     }
 
-    .service-item h2{
-       font-size: 20px;
+    h2{
+       font-size: 10px;
     }
     
     .service-item {
-      width: 40%;
+      width: 60%;
+      height: 100px;
       justify-content: space-between;
 
       align-self: center;
@@ -664,9 +665,15 @@ section.hero-text h1 {
     
     }
 
+    .service-item span{
+        width: 50px;
+        height: 50px;
+    }
+
     .service-item img{
-        width: 150px;
-        height: 150px;
+        width: 250px;
+        height: 300px;
+
 
     }
   }
@@ -901,7 +908,7 @@ color: white;
 /*  Media queries 
 ============================= */
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     a.detail {
         background: none;
         width: 100%;
@@ -925,7 +932,7 @@ color: white;
     }
     
 }
-@media only screen and (max-width: 600px) {
+@media (max-width: 500px) {
     .navbar-default .navbar-collapse {
         border-color: none;
         background: #000000;
@@ -1073,7 +1080,7 @@ color: white;
 
 
 
-@media (max-width: 450px) {
+@media (max-width: 500px) {
     .bottom-article a.pull-right {
         float: left;
         margin-top: 20px;
