--- a/css/style.css
+++ b/css/style.css
@@ -642,41 +642,7 @@ section.hero-text h1 {
     background-size: cover;
   }
   
-  @media (max-width: 450px) {
 
-    
-
-    .services {
-    
-      margin: 0;
-    }
-
-    h2{
-       font-size: 10px;
-    }
-    
-    .service-item {
-      width: 60%;
-      height: 100px;
-      justify-content: space-between;
-
-      align-self: center;
-
-    
-    }
-
-    .service-item span{
-        width: 50px;
-        height: 50px;
-    }
-
-    .service-item img{
-        width: 250px;
-        height: 300px;
-
-
-    }
-  }
 
 
 
@@ -913,26 +879,8 @@ color: white;
         background: none;
         width: 100%;
     }
-    footer .widget form input#appendedInputButton {
-        display: block;
-        width: 91%;
-        -webkit-border-radius: 4px 4px 4px 4px;
-        -moz-border-radius: 4px 4px 4px 4px;
-        border-radius: 4px 4px 4px 4px;
-    }
-    footer .widget form .input-append .btn {
-        display: block;
-        width: 100%;
-        padding-right: 0;
-        padding-left: 0;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        margin-top: 10px;
-    }
+
     
-}
-@media (max-width: 500px) {
     .navbar-default .navbar-collapse {
         border-color: none;
         background: #000000;
@@ -1032,13 +980,7 @@ color: white;
         border-bottom: 1px solid #e9e9e9;
         padding-bottom: 20px;
     }
-    .flexslider .slide-caption {
-        width: 90%;
-        padding: 2%;
-        position: absolute;
-        left: 0;
-        bottom: -40px;
-    }
+  
     #inner-headline .breadcrumb {
         float: left;
         clear: both;
@@ -1060,47 +1002,14 @@ color: white;
         border-left: none;
         padding: 0 0 0 0;
     }
-    footer .col-lg-1,
-{
-        margin-bottom: 20px;
-    }
+
     #sub-footer ul.social-network {
         float: left;
     }
-    [class*="span"] {
-        margin-bottom: 20px;
-    }
-}
+ 
 
 
 
-
-
-
-
-
-
-@media (max-width: 500px) {
-    .bottom-article a.pull-right {
-        float: left;
-        margin-top: 20px;
-    }
-    .search {
-        float: left;
-    }
-    .flexslider .flex-caption {
-        display: none;
-    }
-    .cta-text {
-        margin: 0 auto;
-        text-align: center;
-    }
-    ul.portfolio li article a i {
-        width: 20px;
-        height: 20px;
-        font-size: 14px;
-    }
-}
 .carousel li {
     margin-right: 5px;
 }
@@ -1123,4 +1032,46 @@ color: white;
     background-color: #3BA0F4;
 }
 
+
+
+
+
+.services {
+    display: grid;
+    margin-left: 5rem;
+    justify-content: center;
+  
+    grid-template-columns: repeat(2, 4fr);
+}
+
+    
+
+
+ 
+  .service-item {
+    width: 70%;
+    height: 300px;
+    justify-content: center;
+
+  }
+
+
+
+
+  .service-item h2{
+    justify-content: center;
+     font-size: 15px;
+  }
+ 
+
+
+  .service-item img{
+   justify-content: center;
+
+
+  }
+
+
+
+}
  
