--- a/css/style.css
+++ b/css/style.css
@@ -663,7 +663,7 @@ section.hero-text h1 {
   
 
 
-@media (max-width: 500px){
+@media (min-width: 500px){
 
 
 
@@ -677,6 +677,7 @@ section.hero-text h1 {
         display: grid;
         margin-left: 5rem;
         justify-content: center;
+        margin-top: 3rem;
       
         grid-template-columns: repeat(2, 4fr);
     }
