--- a/css/style.css
+++ b/css/style.css
@@ -843,20 +843,19 @@ footer .widget .widgetheading span {
 
 
 footer {
-    padding: 50px 0 0 0;
-    color: #f8f8f8;
-    column-span: all;
+    padding: 100px 0 0 0;
+    color: black;
+
 }
 footer a {
     color: #fff;
 }
-footer a:hover {
-    color: #eee;
-}
+
 
 /*Below is the text at top of footer */
 h5{
-color: white;
+color: black;
+font-weight: 700;
 }
 
 
@@ -866,12 +865,21 @@ color: white;
 
 
 .image-gallery{
-    border-radius: 1rem;
-    background-color: #007bb5;
+
+    background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5DA5E4, #74ebd5);
+}
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    color: black;
+
 }
 
 .gallery-container{
-    background-color: #007bb5;
+    margin-bottom: -5rem;
+    
     border-radius: 1rem;
 }
 
@@ -937,9 +945,11 @@ input.image-toggler {
 
   .gallery-item img{
 
-    width: 100%;
-    height: 100%;
+    width: 426px;
+    height: 400px;
     border-radius: 1rem;
+    background-color: #007bb5;
+    border-color: black;
   }
 
   .gallery-item label{
@@ -958,6 +968,32 @@ input.image-toggler {
 .button{
     margin-left: 45%;
 }
+
+@media (max-width: 768px){
+    
+  .gallery-item img{
+
+    width: 480px;
+    height: 400px;
+    border-radius: 1rem;
+    background-color: #007bb5;
+    border-color: black;
+  }
+
+
+  .gallery-item label{
+    background-color: #166fa9;
+    border-radius: 1rem;
+
+  }
+
+
+
+
+
+
+
+
 
 
 
