--- a/css/style.css
+++ b/css/style.css
@@ -971,7 +971,7 @@ input.image-toggler {
     
   .gallery-item img{
 
-    width: 480px;
+    width: 100%;
     height: 400px;
     border-radius: 1rem;
     background-color: #007bb5;
