--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ vertical-align: center;
 columns: center;
 }
 
-@media (max-width:767px){
+@media (max-width:760px){
 
     #banner{
         background-color: #166fa9;
@@ -344,9 +344,11 @@ columns: center;
     }
 
     .banner-image img {
-        width: 49%;
+        width: 50%;
         height: 300px;
-        justify-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
     }
 }
 
@@ -664,7 +666,7 @@ section.hero-text h1 {
   
 
 
-@media (max-width: 768px){
+@media (max-width: 760px){
 
 
 
@@ -940,6 +942,7 @@ input.image-toggler {
   input.image-toggler:checked + img.thumbnail + img.full {
     display: grid;
     border-radius: 1rem;
+    border-color: #0563bb;
   }
 
  
@@ -971,7 +974,7 @@ input.image-toggler {
     
   .gallery-item img{
 
-    width: 100%;
+    width: 480px;
     height: 400px;
     border-radius: 1rem;
     background-color: #007bb5;
