--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,8 @@ select.selectmenu {
 #banner{
     display: flex;
     background-color: #166fa9;
+    align-items: center;
+    justify-content: center;
 
 }
 
@@ -333,7 +335,7 @@ vertical-align: center;
 columns: center;
 }
 
-@media (max-width:760px){
+@media (max-width:767px){
 
     #banner{
         background-color: #166fa9;
@@ -344,7 +346,7 @@ columns: center;
     }
 
     .banner-image img {
-        width: 50%;
+     
         height: 300px;
   display: flex;
   align-items: center;
@@ -666,7 +668,7 @@ section.hero-text h1 {
   
 
 
-@media (max-width: 760px){
+@media (max-width: 768px){
 
 
 
@@ -974,8 +976,10 @@ input.image-toggler {
     
   .gallery-item img{
 
-    width: 480px;
+    width: 100%;
     height: 400px;
+    justify-content: center;
+    align-items: center;
     border-radius: 1rem;
     background-color: #007bb5;
     border-color: black;
@@ -990,7 +994,7 @@ input.image-toggler {
 
 
 
-
+}
 
 
 
