--- a/css/style.css
+++ b/css/style.css
@@ -704,7 +704,7 @@ section.hero-text h1 {
     
     .service-item h2{
         justify-content: center;
-         font-size: 15px;
+         font-size: 13px;
       }
      
     
@@ -869,6 +869,7 @@ font-weight: 700;
 
 
 .image-gallery{
+    display: grid;
 
     background: -webkit-linear-gradient(to right, #5DA5E4 , #74ebd5);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #5DA5E4, #74ebd5);
@@ -882,18 +883,18 @@ h3{
 }
 
 .gallery-container{
-    margin-bottom: -5rem;
+    display: grid;
+  
     
     border-radius: 1rem;
 }
 
 
 .gallery {
-    margin-top: 5rem;
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+
 	/* Compensate for excess margin on outer gallery flex items */
-	margin: -1rem -1rem;
+	margin: 0 auto;
 
     border-radius: 1rem;
 }
@@ -911,10 +912,9 @@ h3{
 
 .gallery-image {
     border-radius: 1rem;
-	display: block;
+	display: grid;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
 	transition: transform 400ms ease-out;
 }
 
@@ -942,7 +942,7 @@ input.image-toggler {
   }
   
   input.image-toggler:checked + img.thumbnail + img.full {
-    display: grid;
+    display: flex;
     border-radius: 1rem;
     border-color: #0563bb;
   }
@@ -951,7 +951,7 @@ input.image-toggler {
 
   .gallery-item img{
 
-    width: 426px;
+    width: 100%;
     height: 400px;
     border-radius: 1rem;
     background-color: #007bb5;
@@ -960,6 +960,7 @@ input.image-toggler {
   }
 
   .gallery-item label{
+    display: flex;
     background-color: #166fa9;
     border-radius: 1rem;
 
