--- a/css/style.css
+++ b/css/style.css
@@ -192,10 +192,11 @@ header .nav li .dropdown-menu li a {
 
 
 
+
 /* --- Navbar menu --- */
 
 header .navigation {
-    float: right;
+    float: center;
 }
 header ul.nav li {
     border: none;
@@ -222,14 +223,17 @@ header ul.nav li ul li a {
 
 .nav-social-icons a{
 
+    color: white;
    font-size: 20px;
    padding: 15px;
-   margin-top: 20px;
+   margin-top: -20px;
    margin-bottom: 20px;
 }
 
-.nav-social-icons a :hover{
-    color: white;
+.nav-social-icons a :focus{
+    -webkit-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
 }
 
 
@@ -329,27 +333,27 @@ select.selectmenu {
     margin-left: 50rem;
     margin-right: 50rem;
     display: flex;
- width: 50%;
+object-fit: fill;
  height: 500px;
 vertical-align: center;
 columns: center;
 }
 
-@media (max-width:992px){
+@media (max-width:600px){
 
     #banner{
         background-color: #166fa9;
-        margin-left: -25rem;
-        margin-right: -25rem;
+
         display: flex;
         justify-content: center;
     
     }
 
     .banner-image img {
-        
+        display: flex;
+        width: auto;
         height: 300px;
-        
+        vertical-align: center;
         object-fit: fill;
      
     }
@@ -504,8 +508,10 @@ section.hero-text h1 {
 .btn-container{
 
     display: flex;
-    justify-content: space-between;
-    text-align: left;
+    align-items: center;
+    text-align: center;
+    margin: auto;
+    max-width: 400px;
     
 }
 
@@ -515,6 +521,7 @@ section.hero-text h1 {
     flex: auto;
     margin-top: 50px;
     margin-right: 15px;
+    width: 40%;
     padding: 10px;
     text-align: center;
     text-transform: uppercase;
@@ -522,9 +529,10 @@ section.hero-text h1 {
     background-size: 200% auto;
     color: black;
     font-weight: 800;
+    border-radius: 1rem;
     text-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-    border-radius: 10px;
-    background-image: linear-gradient(to right, #84fab0 0%, #0563bb 51%, #007bb5 100%);
+    box-shadow: black;
+    background-image: linear-gradient(to right,  #ff6900 0%, #fcb900 100%);
    }
 
    .btn-3:hover {
