--- a/css/style.css
+++ b/css/style.css
@@ -337,7 +337,7 @@ vertical-align: center;
 columns: center;
 }
 
-@media (max-width:786px){
+@media (min-width:300px){
     #banner{
         background-color: #166fa9;
         width: auto;
@@ -348,7 +348,7 @@ columns: center;
 
     .banner-image img {
         display: flex;
-        width: auto;
+        width: 100%;
         height: 300px;
         vertical-align: center;
         object-fit: fill;
@@ -384,8 +384,9 @@ section.hero-text {
 }
 
 
-section.hero-text h1 {
-    color: #fff;
+section.hero-text p {
+    color: black;
+    font-weight: 300;
 }
 
 
@@ -394,6 +395,7 @@ section.hero-text h1 {
     margin-top: 3rem;
     vertical-align: right;
 }
+
 
 
 /* About Us section ends*/
