--- a/css/style.css
+++ b/css/style.css
@@ -547,45 +547,74 @@ section.hero-text p {
 
 /* Review Section Begins
 ----------------------------------*/
-
-.testimonial-area{
-    margin-bottom: 10px;
-}
-
-.testimonial-solid {
-    padding: 50px 0 4px 0;
-    background: whitesmoke;
-    text-align: center;
-    margin-bottom: -10px;
-}
-
- .carousel-inner {
-    margin: 20px 0;
-}
-.carousel-indicators {
-    bottom: -30px;
-    color: #007bb5;
-    
-}
-
-.carousel-indicators .active{
-    color: #007bb5;
-}
-
-.text-center img {
-    margin: auto;
+.container {
     width: 100%;
-}
-
-.testimonial-solid p {
-    color: #000000;
-    font-size: 16px;
-    line-height: 30px;
-    font-style: italic;
-    font-weight: 300;
+    padding: 5px 30px;
+    position: relative;
+    margin-top: 15px;
+  }
+  .container .swiper {
+    margin-top: 15px;
+  }
+  
+  .container .swiper-slide {
+    text-align: start;
+    font-size: 18px;
+    position: relative;
+    border-radius: 15px;
     text-align: center;
-}
 
+  }
+  
+  .work{
+      background-color: whitesmoke;
+      color: black;
+      height: 500px;
+  }
+  .work-container{
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 7rem 0.5rem;
+  }
+  .heading{
+      display: grid;
+      place-items: center;
+  }
+  h2{
+      font-size: 2rem;
+      font-weight: 800;
+      color: black;
+  }
+  .heading h2::after{
+      content: "";
+      height: 2px;
+      width: 100px;
+      background-color: #ff725e;
+      display: block;
+      margin: 0.3rem auto 0;
+  }
+  .heading p{
+      margin-top: 0.5rem;
+  }
+  .swiper-button-next{
+      right: 0;
+    
+  }
+  .swiper-button-prev{
+      left: 0;
+  }
+  .card-body{
+      margin-top: 0.7rem;
+      margin-right: 3rem;
+      margin-left: 3rem;
+  }
+  .testimonial-text{
+      font-style: italic;
+  }
+  .testimonial-author{
+      margin-top: 0.5rem;
+      font-weight: bold;
+  }
 
 
 
