--- a/css/style.css
+++ b/css/style.css
@@ -393,7 +393,7 @@ section.hero-text p {
     width: 100;
     margin-left: 30px;
     margin-right: 35px;
-    margin-bottom: 4rem;
+    margin-top: 10rem;
     align-items: center;
    justify-content: center;
 }
@@ -404,6 +404,17 @@ section.hero-text p {
     
 }
 
+h1{
+    text-align: center;
+    font-weight: 800;
+    color: black;
+    margin-top: 10rem;
+    margin-bottom: -7rem;
+}
+
+hr{
+    color: #000;
+}
 
 
 
@@ -678,7 +689,7 @@ section.hero-text p {
   }
 
 
-  h1{
+  h4{
     text-align: center;
     color: black;
     font-weight: 700;
